<resources>
    <string name="app_name">MyMentoApp</string>

    <string name="title_activity_login">Login</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <string name="hello_world">Hello Square World!</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="buna_ziua">BUNA ZIUA, </string>

    <string name="textview">TextView</string>

    <string name="tutor">Tutor</string>
    <string name="student">Student</string>

    <string name="tutor_profile">tutor profile</string>
    <string name="student_profile">student profile</string>

    <string name="create_tutor_profile">Create Tutor Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="became_tutor_cond">If you want to become a tutor you have to choose at least one course to teach.</string>

    <string name="home">Back to home</string>
    <string name="log_out">Log Out</string>

    <string name="my_courses">My courses</string>
    <string name="edit_profile">Edit profile</string>

    <string name="activity">Activity</string>
    <string name="courses_i_teach">Courses I teach</string>
    <string name="available_course">Available courses</string>
</resources>