<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfileActivity"
    android:background="#C4C9D0">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar_home"
                layout="@layout/toolbar_home" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/email_view"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/studyYear"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/domain"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/course_text_view"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/my_courses"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/layout_recommended"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_course"
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/text_view_course2"
                style="@style/course_style"
                android:text="@string/courses_i_teach"
                android:visibility="gone" />

            <TextView
                android:id="@+id/teach_courses"
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

            <Button
                android:id="@+id/edit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/edit_profile"
                app:backgroundTint="#2850a1" />

            <Button
                android:id="@+id/download_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/activity"
                app:backgroundTint="#2850a1" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>